Fixed pidnet image to make it more readable. Added tooltip text to misc buttons in index.html. Added a fancier .tooltip class to main.scss, but it's not being used right now.

--- a/home/static/sass/main.scss
+++ b/home/static/sass/main.scss
@@ -916,3 +916,34 @@ code, samp {
 .screenshots_box {
     margin-top: 10px;
 }
+
+/* Fancy Tooltip styles */
+.tooltip{
+    display: inline;
+    position: relative;
+}
+
+.tooltip:hover:after{
+    background: $greybg;
+    //background: rgba(0,0,0,.8);
+    border-radius: 5px;
+    bottom: 26px;
+    color: #fff;
+    content: attr(title);
+    left: 20%;
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 220px;
+}
+
+.tooltip:hover:before{
+    border: solid;
+    border-color: $bordermain;
+    border-width: 6px 6px 0 6px;
+    bottom: 20px;
+    content: "";
+    left: 50%;
+    position: absolute;
+    z-index: 99;
+}
